--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nuxt": "^2.15.3",
     "nuxt-property-decorator": "^2.9.1",
     "vue-class-component": "^7.2.6",
+    "vue-loading-template": "^1.3.2",
     "vue-property-decorator": "^9.1.2"
   },
   "devDependencies": {
